apps/docs/content/docs/v2/holidaze/bookings.mdx
---
title: Bookings
description: Bookings related to Holidaze
---

import { Hr } from "@/components/hr"
import { Callout } from "@/components/callout"
import { EndpointDetails } from "@/components/endpoint-details"
import { TypeTable } from "next-docs-ui/components/type-table"

<Callout variant="warning">
  These are authenticated endpoints. You can visit [authentication](./authentication) to get an access token.
</Callout>

This endpoint allows you to create, read, update and delete bookings.

These endpoints support pagination and sorting. Read more about these features [here](../pagination-sorting).

## The Booking model

<TypeTable
  type={{
    id: { type: "string", description: "The unique id of the booking." },
    dateFrom: { type: "string", description: "The date the booking starts." },
    dateTo: { type: "string", description: "The date the booking ends." },
    guests: { type: "integer", description: "The number of guests for the booking." },
    created: { type: "string", description: "The date the booking was created." },
    updated: { type: "string", description: "The date the booking was last updated." }
  }}
/>

<Hr />

## Query parameters

Not all of the properties of a booking are returned by default. You can use the following optional query parameters to include additional properties in the response.

<TypeTable
  type={{
    _customer: { type: "boolean", default: "false", description: "Include customer." },
    _venue: { type: "boolean", default: "false", description: "Include venue." }
  }}
/>

```json title="Example with all optional query parameters"
{
  "data": {
    "id": "string",
    "dateFrom": "string",
    "dateTo": "string",
    "guests": 0,
    "created": "string",
    "updated": "string",
    "venue": {
      "id": "string",
      "name": "string",
      "description": "string",
      "media": [
        {
          "url": "https://url.com/image.jpg",
          "alt": "string"
        }
      ],
      "price": 0,
      "maxGuests": 0,
      "rating": 0,
      "created": "string",
      "updated": "string",
      "meta": {
        "wifi": true,
        "parking": true,
        "breakfast": true,
        "pets": true
      },
      "location": {
        "address": "string",
        "city": "string",
        "zip": "string",
        "country": "string",
        "continent": "string",
        "lat": 0,
        "lng": 0
      },
      "owner": {
        "name": "string",
        "email": "user@example.com",
        "bio": "string",
        "avatar": {
          "url": "https://url.com/image.jpg",
          "alt": "string"
        },
        "banner": {
          "url": "https://url.com/image.jpg",
          "alt": "string"
        }
      }
    },
    "customer": {
      "name": "string",
      "email": "user@example.com",
      "bio": "string",
      "avatar": {
        "url": "https://url.com/image.jpg",
        "alt": "string"
      },
      "banner": {
        "url": "https://url.com/image.jpg",
        "alt": "string"
      }
    }
  },
  "meta": {}
}
```

<Hr />

## All bookings

<EndpointDetails path="/holidaze/bookings" />

Retrieve all bookings.

> If you want to get all bookings by a specific profile, you can use the [bookings by profile](./profiles#all-bookings-by-profile) endpoint.

```json title="Response"
{
  "data": [
    {
      "id": "string",
      "dateFrom": "string",
      "dateTo": "string",
      "guests": 0,
      "created": "string",
      "updated": "string"
    },
    {
      "id": "string",
      "dateFrom": "string",
      "dateTo": "string",
      "guests": 0,
      "created": "string",
      "updated": "string"
    }
    // ...
  ],
  "meta": {
    "isFirstPage": true,
    "isLastPage": true,
    "currentPage": 1,
    "previousPage": null,
    "nextPage": null,
    "pageCount": 1,
    "totalCount": 2
  }
}
```

<Hr />

## Single booking

<EndpointDetails path="/holidaze/bookings/<id>" />

Retrieve a single booking based on its id.

```json title="Response"
{
  "data": {
    "id": "string",
    "dateFrom": "string",
    "dateTo": "string",
    "guests": 0,
    "created": "string",
    "updated": "string"
  },
  "meta": {}
}
```

<Hr />

## Create booking

<EndpointDetails method="POST" path="/holidaze/bookings" />

Create a new booking.

```json title="Request"
{
  "dateFrom": "string", // Required - Instance of new Date()
  "dateTo": "string", // Required - Instance of new Date()
  "guests": 0, // Required
  "venueId": "string" // Required - The id of the venue to book
}
```

```json title="Response"
{
  "data": {
    "id": "string",
    "dateFrom": "string",
    "dateTo": "string",
    "guests": 0,
    "created": "string",
    "updated": "string"
  },
  "meta": {}
}
```

<Hr />

## Update booking

<EndpointDetails method="PUT" path="/holidaze/bookings/<id>" />

Updating a booking.

```json title="Request"
{
  "dateFrom": "string", // Optional - Instance of new Date()
  "dateTo": "string", // Optional - Instance of new Date()
  "guests": 0 // Optional
}
```

```json title="Response"
{
  "data": {
    "id": "string",
    "dateFrom": "string",
    "dateTo": "string",
    "guests": 0,
    "created": "string",
    "updated": "string"
  },
  "meta": {}
}
```

<Hr />

## Delete booking

<EndpointDetails method="DELETE" path="/holidaze/bookings/<id>" />

Delete a booking based on its id.

Returns an empty `204 No Content` response on success.
